# python-fast-forge

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  GETTING-STARTED.md  Makefile  README.md  REPOSITORY_AUDIT_REPORT.md  alembic.ini  atlas.hcl  docker-compose.yml  load_models.py  main.py  pyproject.toml  worker.py
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  database-migrations.yml  test-and-build.yml
alembic/: env.py
alembic/versions/: 2025_11_09-720728eab4fd_initial_schemas.py
config/: TELEMETRY_SETUP.md  otel-collector-config.yaml  prometheus.yml
config/grafana/provisioning/dashboards/: dashboards.yaml
config/grafana/provisioning/datasources/: datasources.yaml
docs/explanation/: atlas-migration.md  clean-architecture.md  design-decisions.md  multi-tenancy.md  observability.md
docs/how-to/: add-endpoint.md  database-migrations.md  debugging.md  deployment.md  running-tests.md
docs/proposals/: ARCHITECTURE_ENHANCEMENTS.md
docs/reference/: architecture.md  atlas-commands.md  configuration.md  testing.md
docs/tutorials/: 00-installation.md  01-first-api.md  02-database-model.md  03-background-jobs.md
migrations/: 20251111071004_initial_schema.sql  README.md  atlas.sum
scripts/: setup.sh  validate.sh
src/: container.py
src/app/: __init__.py  interfaces.py
src/app/tasks/: __init__.py  user_tasks.py
src/app/usecases/: __init__.py  user_usecases.py
src/domain/: exceptions.py  interfaces.py  pagination.py  tenant_claims.py
src/domain/models/: __init__.py  base.py  user.py
src/infrastructure/: __init__.py  config.py  constants.py  temporal_client.py
src/infrastructure/cache/: __init__.py  redis_cache.py
src/infrastructure/filtering/: __init__.py  filterset.py  user_filterset.py
src/infrastructure/logging/: __init__.py  config.py
src/infrastructure/patterns/: __init__.py  circuit_breaker.py
src/infrastructure/persistence/: database.py  unit_of_work.py
src/infrastructure/repositories/: __init__.py  base_repository.py  cached_base_repository.py  cached_user_repository.py  user_repository.py
src/infrastructure/security/: api_signature.py
src/infrastructure/telemetry/: __init__.py  sanitizer.py
src/presentation/api/: __init__.py  dependencies.py
src/presentation/api/middleware/: cors.py  error_handling.py  logging.py  rate_limiting.py  request_context.py  security_headers.py
src/presentation/api/v1/: __init__.py
src/presentation/api/v1/endpoints/: health.py  partners.py  users.py
src/presentation/mappers/: __init__.py
src/presentation/schemas/: __init__.py  error.py  user.py
src/utils/: __init__.py  sanitizer.py  serialization.py  tenant_auth.py
tests/: conftest.py  factories.py  strategies.py
tests/integration/: test_api_signature.py  test_health.py  test_migrations.py  test_partners.py  test_rate_limiting.py  test_request_context.py  test_security_headers.py  test_user_endpoints.py  test_user_usecases.py
tests/unit/: test_array_filters.py  test_cached_base_repository.py  test_cached_user_repository.py  test_circuit_breaker.py  test_config.py  test_constants.py  test_cursor_security.py  test_database.py  test_dependencies.py  test_email_service.py  test_exceptions.py  test_log_sanitization.py  test_pagination.py  test_redis_cache.py  test_sanitizer.py  test_serialization.py  test_span_sanitizer.py  test_temporal_client.py  test_tenant_auth.py  test_unit_of_work.py  test_user_model.py  test_user_schemas.py
