[project]
name = "python-fast-forge"
version = "0.1.0"
description = "A production-ready FastAPI boilerplate with clean architecture, dependency injection, and best practices"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "thaithienvanid", email = "thaithienvanid@users.noreply.github.com"}
]
license = {text = "MIT"}
keywords = [
    "fastapi",
    "boilerplate",
    "clean-architecture",
    "dependency-injection",
    "api",
    "python312",
    "asyncio",
    "sqlalchemy",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

# Core runtime dependencies
dependencies = [
    # Web framework
    "fastapi>=0.121.0,<1.0.0",
    "uvicorn[standard]>=0.38.0,<1.0.0",
    "starlette>=0.40.0,<0.50.0",
    "httpx>=0.28.1,<1.0.0",
    # Data validation & settings
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    # Authentication & security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "cryptography>=42.0.0,<47.0.0",
    # Database & ORM
    "sqlalchemy>=2.0.44,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.17.0,<2.0.0",
    # Caching & messaging
    "redis>=7.0.0,<8.0.0",
    # Workflow engine
    "temporalio>=1.8.0,<2.0.0",
    # Utilities
    "dependency-injector>=4.48.0,<5.0.0",
    "structlog>=25.5.0,<26.0.0",
    "pybreaker>=1.4.0,<2.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "uuid-extension>=0.2.0,<1.0.0",
    "zstandard>=0.25.0,<1.0.0",
    # OpenTelemetry (observability)
    "opentelemetry-api>=1.38.0,<2.0.0",
    "opentelemetry-sdk>=1.38.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-logging>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-requests>=0.48b0,<1.0.0",
    "opentelemetry-exporter-otlp>=1.38.0,<2.0.0",
]

# PEP 735 dependency groups for development
[dependency-groups]
# Core development dependencies (linting, type checking, hooks)
dev = [
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "pre-commit>=4.3.0",
    # Type stubs
    "types-redis>=4.6.0",
    "types-python-jose>=3.5.0.20250531",
]

# Testing dependencies
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "pytest-benchmark>=5.1.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.1",
    "hypothesis>=6.147.0",
    "nest-asyncio>=1.6.0",
    "greenlet>=3.1.1",
]

# Security scanning dependencies
security = [
    "bandit>=1.8.0",
    "safety>=3.3.0",
    "pip-audit>=2.9.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"  # Keep in sync with tool.mypy.python_version and requires-python
output-format = "grouped"
cache-dir = ".ruff_cache"

[tool.ruff.lint]
# Enable modern Python 3.12+ checks
select = [
    # Pyflakes
    "F",     # pyflakes errors
    # Pycodestyle
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    # Isort
    "I",     # isort (import sorting)
    # Flake8 plugins
    "B",     # flake8-bugbear (common bugs)
    "C4",    # flake8-comprehensions (list/dict comprehension improvements)
    "DTZ",   # flake8-datetimez (timezone-aware datetime)
    "T10",   # flake8-debugger (no pdb.set_trace)
    "EM",    # flake8-errmsg (error message formatting)
    "FA",    # flake8-future-annotations (use modern annotations)
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging (proper logging usage)
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie (misc lints)
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise (exception raising style)
    "RET",   # flake8-return (return statement improvements)
    "SIM",   # flake8-simplify (code simplification)
    "TCH",   # flake8-type-checking (typing.TYPE_CHECKING usage)
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib (prefer pathlib over os.path)
    "TD",    # flake8-todos (TODO format)
    "FIX",   # flake8-fixme (FIXME/XXX detection)
    "ERA",   # eradicate (commented-out code)
    "PL",    # Pylint
    "TRY",   # tryceratops (exception handling)
    "FLY",   # flynt (string formatting)
    "PERF",  # Perflint (performance anti-patterns)
    "FURB",  # refurb (modernize Python code)
    "RUF",   # Ruff-specific rules
    # pyupgrade (automatically modernize syntax)
    "UP",    # pyupgrade (Python version-specific improvements)
    # Naming conventions
    "N",     # pep8-naming
    # Security
    "S",     # bandit (security)
    # Debugging
    "T20",   # flake8-print (no print statements)
    # Async
    "ASYNC", # flake8-async (async/await patterns)
]

ignore = [
    # Disabled for compatibility
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (FastAPI Depends pattern)
    "S101",    # use of assert (OK in tests)
    "N818",    # Exception names don't need Error suffix (domain exceptions)

    # Disabled by preference - Code style
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
    "FIX002",  # Line contains TODO
    "EM101",   # Exception must not use string literal (too strict)
    "EM102",   # Exception must not use f-string literal (too strict)
    "TRY003",  # Avoid specifying long messages in exception string (too strict)
    "TRY300",  # Consider moving statement to else block (too strict)
    "TRY301",  # Abstract raise to inner function (too strict)
    "TRY400",  # Use logging.exception instead of logging.error (situational)
    "PLR0913", # Too many arguments (sometimes necessary)
    "PLR2004", # Magic value used in comparison (too strict for constants)
    "RET504",  # Unnecessary assignment before return (sometimes clearer)
    "SIM108",  # Use ternary operator (sometimes less readable)
    "PLW0603", # Global statement discouraged (intentional for singletons)

    # Disabled - Type checking imports (optimization, Phase 2)
    "TC001",   # Move application import into TYPE_CHECKING (Phase 2)
    "TC002",   # Move third-party import into TYPE_CHECKING (Phase 2)
    "TC003",   # Move standard library import into TYPE_CHECKING (Phase 2)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Exclude patterns
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic/versions/*",
]

[tool.ruff.lint.per-file-ignores]
# Test files - relaxed checks for test code
"tests/**/*.py" = [
    "S101", "S105", "S106", "S311",  # Security checks (assert, hardcoded secrets, random)
    "PLR2004", "PT011", "PT018",      # Complexity & pytest style
    "ARG001", "ARG002",               # Unused arguments (pytest fixtures)
    "DTZ001", "DTZ005",               # Datetime without timezone
    "PLC0415",                        # Lazy imports for test isolation
    "RUF001", "RUF005", "RUF043", "RUF059",  # Ruff-specific test patterns
    "SIM105", "SIM201",               # Simplification (readability preference)
]
"tests/conftest.py" = ["DTZ005"]     # Datetime for test fixtures
"tests/unit/test_config.py" = ["S104"]  # Allow 0.0.0.0 in config tests

# Re-exports in __init__.py files
"**/__init__.py" = ["F401", "F403"]  # Unused/wildcard imports

# Generated code - migrations
"alembic/versions/*.py" = ["F401", "INP001"]

# Infrastructure - Protocol implementations & callbacks
"src/infrastructure/logging/config.py" = ["ARG001", "RUF005"]
"src/infrastructure/telemetry/sanitizer.py" = ["ARG002"]
"src/infrastructure/patterns/circuit_breaker.py" = ["ARG002"]

# Infrastructure - Intentional patterns
"src/infrastructure/config.py" = ["S104", "SIM102"]  # Docker 0.0.0.0 binding
"src/infrastructure/cache/redis_cache.py" = ["DTZ005", "PERF401"]  # Cache timestamps
"src/infrastructure/repositories/base_repository.py" = ["FURB162"]  # UTC conversion
"src/infrastructure/repositories/cached_base_repository.py" = ["S110", "SIM105"]  # Graceful cache degradation
"src/infrastructure/repositories/cached_user_repository.py" = ["S110", "SIM105"]  # Graceful cache degradation
"src/infrastructure/telemetry/__init__.py" = ["S110", "TRY002", "SIM105"]  # Optional deps

# Infrastructure - Complex dynamic patterns
"src/infrastructure/filtering/filterset.py" = ["N802", "PLR0911", "PLR0912", "ERA001"]
"src/infrastructure/filtering/user_filterset.py" = ["ERA001"]

# Application layer
"src/app/usecases/user_usecases.py" = ["PLC0415"]  # Lazy imports (avoid circular deps)

# Domain layer
"src/domain/pagination.py" = ["TRY004"]  # ValueError more specific than TypeError

# Utilities
"src/utils/serialization.py" = ["PLR0911", "PLC0415"]  # Type dispatch pattern

# Presentation - API layer
"src/presentation/api/dependencies.py" = ["ERA001"]  # Example code
"src/presentation/api/middleware/request_context.py" = ["ERA001"]  # Debug code
"src/presentation/api/middleware/security_headers.py" = ["TRY002"]

# External integrations
"src/external/email_service.py" = ["TRY002"]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
# Python version (keep in sync with tool.ruff.target-version)
python_version = "3.13"

# Strict mode enables all optional checks (includes warn_return_any, warn_unused_ignores,
# disallow_untyped_defs, disallow_incomplete_defs, disallow_untyped_calls, check_untyped_defs,
# warn_redundant_casts, warn_unused_configs, warn_no_return, strict_equality, strict_concatenate,
# no_implicit_optional, and more)
strict = true

# Override strict mode for FastAPI patterns
disallow_untyped_decorators = false  # FastAPI decorators are often untyped

# Type checking behavior
ignore_missing_imports = false  # Require type stubs for third-party libraries

# Display configuration
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
show_absolute_path = false
show_traceback = true

# Performance
incremental = true
cache_dir = ".mypy_cache"

# Package structure
namespace_packages = true
explicit_package_bases = true

# Plugins
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

# Pydantic plugin configuration
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Third-party library overrides (no type stubs available)
[[tool.mypy.overrides]]
module = [
    "dependency_injector.*",
    "slowapi.*",
    "opentelemetry.*",
    "temporalio.*",
    "pybreaker.*",
    "zstandard.*",
    "uuid_extension.*",
]
ignore_missing_imports = true

# FilterSet - complex dynamic typing
[[tool.mypy.overrides]]
module = "src.infrastructure.filtering.filterset"
ignore_errors = true

# Repository layer - complex SQLAlchemy generics
[[tool.mypy.overrides]]
module = [
    "src.infrastructure.repositories.filter_builder",
    "src.infrastructure.repositories.cached_user_repository",
]
ignore_errors = true

# Test files - allow more flexibility
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false

# Alembic migrations - generated code
[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[tool.pytest.ini_options]
# Async configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

# Console output
console_output_style = "progress"
log_cli = false
log_cli_level = "INFO"

# Test execution
addopts = [
    # Verbosity and output
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--show-capture=no",

    # Coverage
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",

    # Performance
    "--durations=10",
    "--durations-min=0.1",
]

# Warning filters for third-party libraries
filterwarnings = [
    # Uncomment to treat warnings as errors (strict mode)
    # "error",
    "ignore::DeprecationWarning:dependency_injector",
    "ignore::DeprecationWarning:temporalio",
]

# Pytest markers for test categorization
markers = [
    # Test type markers
    "unit: Unit tests - test individual components in isolation with mocks",
    "integration: Integration tests - test multiple components together or with real dependencies",

    # Component markers
    "domain: Domain layer tests",
    "application: Application/use case layer tests",
    "infrastructure: Infrastructure layer tests",
    "presentation: Presentation/API layer tests",

    # Feature markers
    "auth: Authentication and authorization tests",
    "database: Database-related tests",
    "cache: Cache-related tests",
    "filtering: FilterSet and query building tests",
    "soft_delete: Soft delete functionality tests",

    # Performance markers
    "slow: Tests that take more than 1 second",
    "benchmark: Performance benchmark tests",
]

# Test collection
norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    ".venv",
    "venv",
    "node_modules",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".hypothesis",
]

# Minimum Python version
minversion = "8.0"

# xdist configuration (parallel execution)
# Note: Tests are parallel-safe (pytest-xdist installed).
# For this test suite size (~250 tests, mostly mocked), sequential is faster (2s vs 10s).
# Use `pytest -n auto` for large test suites or slower I/O-bound tests.

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/venv/*",
    "main.py",
    "worker.py",
]
context = "${CONTEXT}"

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
# Minimum coverage threshold
fail_under = 50
show_missing = true
skip_covered = false
skip_empty = true
precision = 2
sort = "Cover"

# Exclusion patterns
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "pragma: nocover",

    # Debug-only code
    "def __repr__",
    "def __str__",

    # Abstract methods and NotImplementedError
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",

    # Type checking blocks
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",

    # Main blocks
    "if __name__ == .__main__.:",

    # Defensive programming
    "except ImportError:",
    "except ModuleNotFoundError:",

    # Protocol classes
    "@(typing\\.)?overload",
    "class .*\\bProtocol\\):",

    # Ellipsis
    "\\.\\.\\.",
]

# Partial coverage exclusions
partial_branches = [
    "pragma: no branch",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    "build",
    "dist",
]
# Bandit test IDs to skip
skips = [
    "B101",  # assert_used (OK in tests)
    "B104",  # hardcoded_bind_all_interfaces (0.0.0.0 is intentional for containerized apps)
    "B110",  # try_except_pass (intentional for optional dependencies)
    "B601",  # paramiko_calls (not used)
]
# Severity level
level = "MEDIUM"
# Confidence level
confidence = "MEDIUM"
